feat: Endpoint amparos por contrato udistrital/argo_documentacion/issues/123
