# src/amparo-polizas/amparo-polizas.controller.ts
@@ -30,6 +30,11 @@ export class AmparoPolizasController {
     return this.amparoPolizasService.findOne(+id);
   }
 
+  @ApiOperation({ summary: 'Listar todos los amparos de un contrato' })
+  @Get('contrato/:id')
+  findByContractId(@Param('id') id: string): Promise<StandardResponse<any>> {
+    return this.amparoPolizasService.findByContractId(id);
+  }
   @Post()
   @HttpCode(HttpStatus.CREATED)
   @ApiOperation({ summary: 'Crear múltiples amparos de pólizas' })
