# swagger/swagger.json
@@ -232,6 +232,30 @@
           "amparos"
         ]
       }
+    },
+    "/amparos/contrato/{id}": {
+      "get": {
+        "operationId": "AmparoPolizasController_findByContractId",
+        "summary": "Listar todos los amparos de un contrato",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "amparos"
+        ]
+      }
     }
   },
   "info": {
